# youbot_bringup

./: CMakeLists.txt  README.md  package.xml  set_caps.sh  setup_gateway.sh
config/: f710.config.yaml  youbot-ethercat.cfg
launch/: youbot_driver.launch  youbot_teleop.launch  youbot_urg_lidar.launch
network-interfaces/: interfaces
scripts/: install
udev-rules/: 47-hokuyo.rules
