<?xml version="1.0"?>
<package format="2">
  <name>youbot_bringup</name>
  <version>1.0.0</version>
  <description>The youbot_bringup package</description>

  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <exec_depend>youbot_driver_ros_interface</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
